--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@heroicons/vue": "^1.0.6",
     "nuxt": "^3.15.0",
     "vue": "latest",
     "vue-router": "latest"
