--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-router": "latest"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.12.2"
+    "@nuxtjs/tailwindcss": "^6.12.2",
+    "prisma": "^6.2.0"
   }
 }
